--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(CteamProject C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(CteamProject main.c)
+add_executable(CteamProject main.c
+        list.c)
