--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(CteamProject C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(CteamProject main.c
-        list.c)
+        list.c
+        board.h
+        board.c)
