user header added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,9 @@ find_package(CURL REQUIRED)
 # 소스 파일 추가 및 실행 파일 정의
 add_executable(CteamProject main.c list.c board.c
         message.h
-        message.c)
+        message.c
+        user.h
+        user.c)
 
 # libcurl 링크
 target_link_libraries(CteamProject CURL::libcurl)
