--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,19 @@ add_executable(CteamProject main.c list.c board.c
         message.h
         message.c
         user.h
-        user.c)
+        user.c
+        login_register.c
+        login_register.h)
 
 # libcurl 링크
 target_link_libraries(CteamProject CURL::libcurl)
+
+# gui 부분
+include_directories("C:/msys64/mingw64/include/ncursesw")
+link_directories("C:/msys64/mingw64/lib")
+
+add_executable(CteamProject main.c
+        login_register.c
+        login_register.h
+)
+target_link_libraries(CteamProject ncursesw)
